--- a/marketing/Маркетинг.ipynb
+++ b/marketing/Маркетинг.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Методы для масштабирования бизнеса\n",
     "[original article](https://habrahabr.ru/post/329516/)\n",
-    "![marketing](img/marketing.png)\n",
+    "![marketing](../img/marketing.png)\n",
     "### Увеличение размера покупки\n",
     "* **Upsales**\n",
     "Предлагаем улучшенную ,более дорогую версию продукта.<br>Например,при заселении в отель, Вам предлагают улучшить комнату всего за 6$\n",
