--- a/psychology/голод.md
+++ b/psychology/голод.md
@@ -1,3 +1,4 @@
+<a href=README.md><img src="../img/back.jpg" width="50" height="50" /></a>
 <p><h1>Голод</h1></p><p>
 <p>Что можно сказать о голоде? Царь. Один из трех базовых витальных мотивов.<br> Как говорится, все в мире делится на:
 <ol>
