--- a/psychology/пиво.md
+++ b/psychology/пиво.md
@@ -16,5 +16,5 @@
 <br>
 И всех делов. 3 из 6 набрал - значит болен. Не набрал - погуляй пока. И никаких гвоздей. Все просто.
 Возвращаясь к пиву. Разворачивающаяся, прогрессирующая болезнь, со сформировавшейся физической зависимостью на одном пиве не потянет. Поэтому, в таких случаях, даже когда в конкретный данный момент алкоголик и пьет только пиво, это всегда транзитное явление. Например, он так пытался завязать с крепкими напитками, совсем не пить не смог, решил что фигли ему будет от пива-то, и сам не заметил, как стал по ящику пива в день выдувать. Или наоборот, уже началась 2я стадия, но еще пытается себя как-то держать. В любом случае, рано или поздно, причем обычно рано, неизбежно человек в погоне за опьянением сползает в крепкие напитки. <br>
-Но это в клинических случаях, когда эти люди оказываются в поле зрения врачей. Гораздо большее число больных пивным алкоголизмом никогда за мед.помошью не обращаются, и алкоголиками себя разумеется не считают. Поскольку на психическую зависимость человеку относительно несложно глаза закрывать. А то, что человек ежедневно выпивает алкогольсодержащей жидкости больше, чем вообще нужно для организма воды, это как-то на мысли неприятные не наводит. А нужно, как я говорил, 1,5 литра, -3 бутылки всего-то, ну что такое 3 бутылки пива для взрослого мужика? Тьфу! И растереть. Ерунда! И что если не выпьешь хотя бы 0,5,- испытываешь явный дискомфорт, беспокойство, раздражительность, расстройства эмоционального фона, расстройства сна,- на это тоже всегда объяснения находятся. Объяснить-то всегда можно, ежели умеючи. А эти умеют, я вас уверяю. Ну там, - стрессы, гребаная блядская жизнь, могу я раз в жизни спокойно после работы пива попить или где,- и проч и проч и проч. Вот и живут в доклинической, первой стадии алкоголизма. Живут себе и живут, работу, семью, социальные связи не теряют. И никого их алкоголизм особо не напрягает и сложностей не создает. Я имею в виду, никого помимо их самих и их родственников. Ну, алкоголик и алкоголик. Фигли там. Делов-то.
+Но это в клинических случаях, когда эти люди оказываются в поле зрения врачей. Гораздо большее число больных пивным алкоголизмом никогда за мед.помошью не обращаются, и алкоголиками себя разумеется не считают. Поскольку на психическую зависимость человеку относительно несложно глаза закрывать. А то, что человек ежедневно выпивает алкогольсодержащей жидкости больше, чем вообще нужно для организма воды, это как-то на мысли неприятные не наводит. А нужно, как я говорил, 1,5 литра, -3 бутылки всего-то, ну что такое 3 бутылки пива для взрослого мужика? Тьфу! И растереть. Ерунда! И что если не выпьешь хотя бы 0,5,- испытываешь явный дискомфорт, беспокойство, раздражительность, расстройства эмоционального фона, расстройства сна,- на это тоже всегда объяснения находятся. Объяснить-то всегда можно, ежели умеючи. А эти умеют, я вас уверяю. Ну там, - стрессы, гребаная блядская жизнь, могу я раз в жизни спокойно после работы пива попить или где,- и проч и проч и проч. Вот и живут в доклинической, первой стадии алкоголизма. Живут себе и живут, работу, семью, социальные связи не теряют. И никого их алкоголизм особо не напрягает и сложностей не создает. Я имею в виду, никого помимо их самих и их родственников. Ну, алкоголик и алкоголик. Фигли там. Делов-то.<br>
 <a href=README.md><img src="../img/back.jpg" width="50" height="50" /></a>
