--- a/machine learning/Линейные модели, метрики качества,кросс валидация.ipynb
+++ b/machine learning/Линейные модели, метрики качества,кросс валидация.ipynb
@@ -57,9 +57,13 @@
     "$$Q(a,X)=\\frac{1}{l}||Xw-y||^2$$ где $l$-число объектов,$X$-матрица признаков,$w$ -вектор весов,$y$-вектор ответов\n",
     "### Линейная регрессия\n",
     "$$ Q (w,x)=\\frac{1}{l}\\sum_{l=1}^{l} (\\langle w{,}x \\rangle-y_i)^2 \\to \\min\\limits_{w}    $$\n",
-    "То есть задача найти модель, с минимальной ошибкой, то есть переходим к задаче оптимизации.<br>\n",
+    "То есть задача найти такую модель(то есть подобрать веса),которая давала минимальную ошибку на рассматриваемом функционале качества, то есть сводим задачу обучения к задаче**оптимизации**.<br>\n",
     "Среднеквадратичная ошибка-выпуклая(следовательно один минимум) и гладкая функция (значит можно рассчитать градиент).\n",
     "#### Градиентный спуск.\n",
+    "Основная идея: на каждом шаге,движемся в направлении антиградиента(то есть в сторону минимума функции)<br>\n",
+    "в трехмерном пространстве:\n",
+    "![gradient_descent](../img/gradient_descent_1.png)\n",
+    "алгоритм:<br>\n",
     "1. инициализация вектора весов(например нулями) $w^0=0$\n",
     "2. цикл по $t=1,2,3...$ -итерации <br>\n",
     "$w^t=w^{t-1}-\\eta_t \\nabla Q(w^{t-1},X)$,если $||w^t-w^{t-1}||<\\epsilon$, то завершить<br>\n",
@@ -86,6 +90,7 @@
     "* подходит для онлайн-обучения\n",
     "### Линейная классификация\n",
     "задача бинарной классификации:$\\mathbb{Y}=\\{-1,+1\\}$<br>\n",
+    "\n",
     "**линейный классификатор**\n",
     "$$a(x)=sign\\,\\sum^{d+1}_{j=1}w_jx^j=sign\\,\\langle w,x \\rangle$$\n",
     "\n",
@@ -94,7 +99,7 @@
     "![geomlinclass](../img/geomlinclass.png)\n",
     "расстояние от точки до гиперплоскости со знаком:<br>$\\frac{|\\langle w,x \\rangle|}{||w||}$\n",
     "\n",
-    "То есть классификатор вначале измеряет расстояние от точки до гиперплоскости и далее смотрит лишь на знак.<br>\n",
+    "То есть классификатор вначале измеряет расстояние от точки до гиперплоскости и далее смотрит лишь на знак.(все что меньше 0 один класс, все что больше -другой<br>\n",
     "**отступ**<br>\n",
     "* $M_i=y_i\\langle w,x_i \\rangle, y_i=\\{-1,+1\\}$ \n",
     "* $M_i>0$-классификатор дает верный ответ\n",
