Update Интервальные оценки и доверительные интервалы.ipynb

--- a/statistics/Интервальные оценки и доверительные интервалы.ipynb
+++ b/statistics/Интервальные оценки и доверительные интервалы.ipynb
@@ -7,7 +7,7 @@
     "# Интервальные оценки с помощью квантилей\n",
     "\n",
     "#### Правило  двух сигм\n",
-    "Если у нас есть нормально распределенная случайная величина, то 95% ее вероятностной массы приходится на интевал $[\\mu -2\\sigma,\\mu +2\\sigma]$\n",
+    "Если у нас есть нормально распределенная случайная величина, то 95% ее вероятностной массы приходится на интервал $[\\mu -2\\sigma,\\mu +2\\sigma]$\n",
     "$$X \\sim N(\\mu,\\theta^2)\\Rightarrow P(\\mu-2\\theta) \\leq X\\leq\\mu+2\\theta)\\approx0.95$$\n",
     "\n",
     "![2sigm](../img/2sigm.png)\n",
