Create АБ тестирование и параметрические критерии.ipynb

--- a/statistics/АБ тестирование и параметрические критерии.ipynb
+++ b/statistics/АБ тестирование и параметрические критерии.ipynb
@@ -120,7 +120,7 @@
     "выборки:<br>\n",
     "$X^{n_1}_1=(X_11,...,X_{1n_1})$ <br>\n",
     "$X^{n_1}_2=(X_21,...,X_{2n_1})$ <br>\n",
-    "$X_1\\sim N(\\mu_1,\\sigma^2_1),X_2\\sim N(\\mu_2,\\sigma^2_2),\\sigma_1,\\sigma_2 известны$ <br>\n",
+    "$X_1\\sim N(\\mu_1,\\sigma^2_1),X_2\\sim N(\\mu_2,\\sigma^2_2),\\sigma_1,\\sigma_2$ известны<br>\n",
     "нулевая гипотеза:$H_0:\\mu_1=\\mu_2$<br>\n",
     "альтернатива:$H_1:\\mu_1<\\not=>\\mu_2$ <br> \n",
     "\n",
