--- a/statistics/АБ тестирование и параметрические критерии.ipynb
+++ b/statistics/АБ тестирование и параметрические критерии.ipynb
@@ -178,8 +178,8 @@
     "Мы разбиваем область изменения случайной величины на $K$ интервалов ,$n_i$-число элеменотов выборки, которое попало в интервал,$p_i$ теоретическая вероятность попадания в этот интервал при условии справедливости нулевой гипотезы.<br>\n",
     "нулевое распределение:$\\chi^2(X^n) \\sim\\left\\{\n",
     "                \\begin{array}{ll}\n",
-    "                  \\chi^2_{K-1},\\mu,\\theta \\, заданы \\\\\n",
-    "                  \\chi^2_{K-3},\\mu,\\theta\\, оцениваются\n",
+    "                  \\chi^2_{K-1},\\mu,\\theta \\, \\text{ заданы} \\\\\n",
+    "                  \\chi^2_{K-3},\\mu,\\theta\\, \\text{ оцениваются}\n",
     "                \\end{array}\n",
     "              \\right.\n",
     "  $<br>\n",
