--- a/statistics/Гипотезы о долях(распределение Бернулли) параметрические критерии_продолжение.ipynb
+++ b/statistics/Гипотезы о долях(распределение Бернулли) параметрические критерии_продолжение.ipynb
@@ -452,7 +452,7 @@
     "\n",
     "$$\\text{Доверительный интервал для }p_1 - p_2\\colon \\;\\;  \\frac{f - g}{n} \\pm z_{1-\\frac{\\alpha}{2}}\\sqrt{\\frac{f + g}{n^2} - \\frac{(f - g)^2}{n^3}}$$\n",
     "\n",
-    "$$Z-статистика: Z({X_1, X_2}) = \\frac{f - g}{\\sqrt{f + g - \\frac{(f-g)^2}{n}}}$$"
+    "$$\\text{Z-статистика}: Z({X_1, X_2}) = \\frac{f - g}{\\sqrt{f + g - \\frac{(f-g)^2}{n}}}$$"
    ]
   },
   {
