--- a/statistics/Проверка гипотез.ipynb
+++ b/statistics/Проверка гипотез.ipynb
@@ -32,11 +32,11 @@
     "  $H_0$ принимается  | $H_0$ верно принята | Ошибка II рода \n",
     "  $H_0$ непринимается  | Ошибка I рода | $H_0$ верно отвергнута \n",
     "#### ошибка первого рода критичнее:<br>\n",
-    "$P(отвергаем H_0|H_0)$ жестко ограничивается:<br>\n",
+    "$P(\\text{ отвергаем } H_0|H_0)$ жестко ограничивается:<br>\n",
     "если $H_0$ отвергается при $p\\leq\\alpha$, то вероятность ошибки первого рода:<br>\n",
-    "$P(H_0 отвергнута |H_0 верна)=P(p\\leq\\alpha|H_0)\\leq\\alpha$<br>\n",
+    "$P(H_0 \\text{ отвернута } |H_0 \\text{ верна })=P(p\\leq\\alpha|H_0)\\leq\\alpha$<br>\n",
     "Таким образом, правильно построенный критерий имеет вероятность ошибки I рода не больше, чем $\\alpha$\n",
-    "#### ошибку второго рода $P(принимает H_0|H_1)$ мягко минимизируем:<br>\n",
+    "#### ошибку второго рода $P(\\text{ принимает } H_0|H_1)$ мягко минимизируем:<br>\n",
     "**мощность критерия:**<br>\n",
     "pow=P(отвергаем $H_0|H_1$)=1-P(принимаем $H_0|H_1$)\n",
     "<br> То есть,среди всех критериев, которые корректны,мы выбираем критерий максимальной мощности.<br>\n",
