--- a/machine learning/Neural Networks/Neural Networks.ipynb
+++ b/machine learning/Neural Networks/Neural Networks.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![nn](../../img/marketing.png)\n",
+    "![nn](../../img/simple_neural_net.png)\n",
     "In neural net visuals, circles represent neurons and lines represent synapses. Synapses have a really simple job, they take a value from their input, multiply it by a specific weight, and output the result. Neurons are a little more complicated. Their job is to add together the outputs of all their synapses, and apply an activation function. Certain activation functions allow neural nets to model complex non-linear patterns, that simpler models may miss. For our neural net, we’ll use sigmoid activation functions.\n",
     "<img src='../../img/simple_neural_net.png' width=40% />\n",
     "\n",
