--- a/machine learning/Neural Networks/Neural Networks.ipynb
+++ b/machine learning/Neural Networks/Neural Networks.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "![nn](../../img/simple_neural_net.png)\n",
     "In neural net visuals, circles represent neurons and lines represent synapses. Synapses have a really simple job, they take a value from their input, multiply it by a specific weight, and output the result. Neurons are a little more complicated. Their job is to add together the outputs of all their synapses, and apply an activation function. Certain activation functions allow neural nets to model complex non-linear patterns, that simpler models may miss. For our neural net, we’ll use sigmoid activation functions.\n",
-    "<img src='../../img/simple_neural_net.png' width=200 height=200 />\n",
+    "<img src='../../img/simple_neural_net.png' width="200" height="200" />\n",
     "\n",
     "|Code Symbol | Math Symbol | Definition | Dimensions\n",
     "    | :-: | :-: | :-: | :-: |\n",
