Update Интервальные оценки и доверительные интервалы.ipynb

--- a/statistics/Интервальные оценки и доверительные интервалы.ipynb
+++ b/statistics/Интервальные оценки и доверительные интервалы.ipynb
@@ -23,7 +23,7 @@
     "$P(X_{0.0025}\\leq X\\leq X_{0.975})=0.95$ (по определению квантиля)<br>\n",
     "обобщаем:\n",
     "#### Предсказательный интервал\n",
-    "$X\\sim F(x)\\Longrightarrow P(X_{\\frac{\\alpha}{2}}\\leq X\\leq X_{1-\\frac{\\alpha}{2}})=1-\\alpha)$<br>\n",
+    "$X\\sim F(x)\\Longrightarrow P(X_{\\frac{\\alpha}{2}}\\leq X\\leq X_{1-\\frac{\\alpha}{2}})=1-\\alpha$<br>\n",
     "$[X_{\\frac{\\alpha}{2}}, X_{1-\\frac{\\alpha}{2}}]$ - предсказательный интервал порядка 1-$\\alpha$ ($\\alpha$ -квантиль)\n",
     "\n",
     "##### для нормального распределения\n",
