Update Интервальные оценки и доверительные интервалы.ipynb

--- a/statistics/Интервальные оценки и доверительные интервалы.ipynb
+++ b/statistics/Интервальные оценки и доверительные интервалы.ipynb
@@ -27,7 +27,7 @@
     "$[X_{\\frac{\\alpha}{2}}, X_{1-\\frac{\\alpha}{2}}]$ - предсказательный интервал порядка 1-$\\alpha$ ($\\alpha$ -квантиль)\n",
     "\n",
     "##### для нормального распределения\n",
-    "$X \\sim N(\\mu,\\theta^2)\\Longrightarrow P(\\mu-\\theta z_{1-\\frac{\\alpha}{2}}) \\leq X\\leq\\mu+\\theta z_{1-\\frac{\\alpha}{2}})=1-\\alpha$<br>\n",
+    "$X \\sim N(\\mu,\\theta^2)\\Longrightarrow P(\\mu-\\theta z_{1-\\frac{\\alpha}{2}} \\leq X\\leq\\mu+\\theta z_{1-\\frac{\\alpha}{2}})=1-\\alpha$<br>\n",
     "$z_\\alpha$- квантиль стандартного нормального распределения $N(0,1)$"
    ]
   },
