--- a/devops/git/python & git.ipynb
+++ b/devops/git/python & git.ipynb
@@ -23,25 +23,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(1, r'C:\\Users\\jupyter_projects')\n",
+    "sys.path.insert(1, r'C:\\Users\\Kart\\jupyter_projects\\lections\\devops\\git')\n",
     "import mygit as mg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "#a.pyignore()\n",
     "folder=r'C:\\Users\\Kart\\jupyter_projects\\webtrade'\n",
     "git_url='git@github.com:Rayveni/web.git'\n",
-    "a=mg.gitwrapper(folder)\n",
+    "gt=mg.gitwrapper(folder)\n",
     "#a.clone(git_url,True)"
    ]
   },
@@ -53,10 +56,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "webtrade\n",
+      "┣━[webtrade]\n",
+      "┃   ┗━readme.md\n",
+      "┗━README.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "gt.clone(git_url,print_tree=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Добавляем настроенный на python .gitignore "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "webtrade\n",
+      "┣━[webtrade]\n",
+      "┃   ┗━readme.md\n",
+      "┣━.gitignore\n",
+      "┗━README.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "gt.pyignore()\n",
+    "gt.FileTreeMaker(folder,['.git'])"
    ]
   },
   {
@@ -68,74 +113,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\n",
+      "Your branch is ahead of 'origin/master' by 1 commit.\n",
+      "  (use \"git push\" to publish your local commits)\n",
+      "\n",
+      "nothing to commit, working tree clean\n"
+     ]
+    }
+   ],
    "source": [
-    "a.pyignore()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.clone(git_url,True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.FileTreeMaker(a.local_folder,['.git','.gitignore'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.push_commit(git_url,commit_msg='init_commit')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.push()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "repo = Repo(a.local_folder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "repo.git.status()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git@github.com:Rayveni/web.git"
+    "gt.push_commit(git_url,commit_msg='init_commit')"
    ]
   }
  ],
@@ -155,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
