--- a/devops/git/python & git.ipynb
+++ b/devops/git/python & git.ipynb
@@ -13,10 +13,9 @@
     " * ssh-keygen -t rsa -b 4096 -C \"your_email@example.com\"\n",
     " * вводим локацию rsa ключа\n",
     " * опционально вводим пароль\n",
-    "  eval `ssh-agent -s`\n",
-    "  ssh-add /c/Users/****/id_rsa\n",
-    " * добавляем ключ  ssh-add /c/Users/***/jupyter_projects/id_rsa\n",
-    "\n",
+    " * запускаем агента eval $(ssh-agent -s)\n",
+    " \n",
+    " * добавляем ключ  ssh-add /c/Users/****/id_rsa\n",
     " \n",
     "### Работа"
    ]
