Update python & git.ipynb

--- a/devops/git/python & git.ipynb
+++ b/devops/git/python & git.ipynb
@@ -16,6 +16,7 @@
     " * запускаем агента eval $(ssh-agent -s)\n",
     " \n",
     " * добавляем ключ  ssh-add /c/Users/****/id_rsa\n",
+     " * git config --global user.email \"your_email@example.com\"\n",
     " \n",
     "### Работа"
    ]
